# cooperative_cable_transport_vision

./: .gitignore  README.md  new_thing.txt  test_file_rsync.txt  todo.txt
cable_vision_msgs/: CMakeLists.txt  package.xml
control_cable_vision/: CMakeLists.txt  package.xml  todo.txt
control_cable_vision/config/: cable_vision_params.yaml
control_cable_vision/include/control_cable_vision/: ControlCableVision.h  nodelet_control_cable_vision.h  vio_utils.h
control_cable_vision/src/: ControlCableVision.cpp
control_cctv/: CMakeLists.txt  nodelet_plugin.xml  package.xml
control_cctv/config/: .cable_vision_params.yaml.swp  1robot_payload_params.yaml  cable_vision_params.yaml  cable_vision_params.yaml~  cctv_gains_dragonfly.yaml  dragonfly11_multimaster_params.yaml  dragonfly2_multimaster_params.yaml  gc_multimaster_params.yaml  multimaster_params.yaml  no_flight_test_config.rviz  rviz_config.rviz  sim_cable_vision_params.yaml  sim_plotjuggler_layout.xml  sim_rviz_config.rviz  single_uav_params.yaml  so3_gains_dragonfly.yaml  two_robots_bar_params.yaml
control_cctv/config/viz_config/: rviz_config.rviz  sim_rviz_config.rviz
control_cctv/include/control_cable_vision/: ControlCCTV.h
control_cctv/include/control_cctv/: ControlCCTV.h  ControlCableVision.h  SO3Control.h  vio_utils.h
control_cctv/launch/: groundcontrol.launch  groundcontrol_test.launch  just_vicon.launch  mav_manager_vio_qc.launch  replay_on_gc.launch  sim_control_cctv.launch  single_uav.launch  test.launch  test_control.launch  viz_cctv_test.launch
control_cctv/msg/: PayloadCommand.msg  PayloadSublime.msg
control_cctv/scripts/: back_n_forth.sh  python_flight.py  script_test.sh  sim_script_test.sh  startup.sh  two_robots_hovering.sh
control_cctv/src/: .ControlCCTV.cpp.swp  .nodelet_control_cable_vision.cpp.swp  ControlCCTV.cpp  ControlCableVision.cpp  ControlCableVision.cpp.autosave  NodeletControlCCTV.cpp  SO3Control.cpp  nodelet_control_cable_vision.cpp  vio_utils.cpp
docs/: bibliography.bib  equations_notebood.aux  equations_notebood.bbl  equations_notebood.blg  equations_notebood.fdb_latexmk  equations_notebood.fls  equations_notebood.tex
msgs_cctv/: CMakeLists.txt  package.xml
msgs_cctv/msg/: PayloadCommand.msg
payload_trajectory_cctv/: CMakeLists.txt  package.xml
payload_trajectory_cctv/config/: test.rviz
payload_trajectory_cctv/launch/: test.launch
payload_trajectory_cctv/src/: bearass_tracker.cpp  simple_payload_trajectory.cpp  simple_publisher.cpp
payload_trajectory_cctv/srv/: Vec3.srv
pl_tracker_cctv/pl_trackers/: CMakeLists.txt  package.xml  plugin.xml
pl_tracker_cctv/pl_trackers/include/: pl_initial_conditions.h
pl_tracker_cctv/pl_trackers/src/: pl_hover_tracker.cpp  pl_initial_conditions.cpp  pl_line_tracker.cpp  pl_line_tracker_min_jerk.cpp  pl_null_tracker.cpp
pl_tracker_cctv/pl_trackers_manager/: CMakeLists.txt  nodelet_plugin.xml  package.xml
pl_tracker_cctv/pl_trackers_manager/config/: tracker_params.yaml  trackers.yaml
pl_tracker_cctv/pl_trackers_manager/include/pl_trackers_manager/: Tracker.h
pl_tracker_cctv/pl_trackers_manager/src/: pl_trackers_manager.cpp
scripts/: sync_files.sh
simulator_payload/: CMakeLists.txt  package.xml
simulator_payload/src/: payload_simulator.cpp
viz_cctv/: CMakeLists.txt  package.xml
viz_cctv/src/: VizCCTV.cpp
