<package format="2">
  <name>cable_vision_msgs</name>
  <version>1.0.0</version>
  <description>payload messages</description>
  <maintainer email="aarow@seas.upenn.edu">Aaron Weinstein</maintainer>

  <license>BSD</license>

  <author>Aaron Weinstein</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosconsole</depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>message_runtime</exec_depend>

</package>
