<package format="2">
  <name>viz_cctv</name>
  <version>1.0.0</version>
  <description>visualization tools for  cctv</description>
  <maintainer email="adw106@gmail.com">Aaron Weinstein</maintainer>

  <license>BSD</license>

<!--  <url type="website">http://ros.org/wiki/so3_control</url>-->
  <!-- <url type="bugtracker"></url> -->

  <author>Aaron Weinstein</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>msgs_cctv</depend>

<export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
</export>

</package>
